--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <nav>
+      <ul>
+        <li><a href="./js/1-timer.js">Timer</a></li>
+        <li><a href="./js/2-snackbar.js">Snackbar</a></li>
+      </ul>
+    </nav>
 
     <script type="module" src="./main.js"></script>
   </body>
