--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="./js/1-timer.js">Timer</a></li>
-        <li><a href="./js/2-snackbar.js">Snackbar</a></li>
+        <li><a href="./1-timer.html">Timer</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
       </ul>
     </nav>
 
